fix mob menu z-index

--- a/css/main.css
+++ b/css/main.css
@@ -708,6 +708,7 @@ body {
     fill: var(--hov-nav-contacts);
   }
   .mobile-menu {
+    z-index: 2;
     position: absolute;
     top: 0;
     left: 0;
