--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -49,6 +49,7 @@
     }
 
     .mobile-menu {
+        z-index: 2;
         position: absolute;
         top: 0;
         left: 0;
